# MobileAutomationAgents

./: .gitignore  README.md  pyproject.toml
src/sdet_orchestration_crew___mobile_automation_generator/: crew.py  main.py
src/sdet_orchestration_crew___mobile_automation_generator/config/: agents.yaml  tasks.yaml
src/sdet_orchestration_crew___mobile_automation_generator/tools/: locator_extractor_tool.py
