[project]
name = "sdet_orchestration_crew___mobile_automation_generator"
version = "0.1.0"
description = "sdet_orchestration_crew___mobile_automation_generator using crewAI"
authors = [{ name = "Harshad Bodekar", email = "harshoo3009@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
]

[project.scripts]
sdet_orchestration_crew___mobile_automation_generator = "sdet_orchestration_crew___mobile_automation_generator.main:run"
run_crew = "sdet_orchestration_crew___mobile_automation_generator.main:run"
train = "sdet_orchestration_crew___mobile_automation_generator.main:train"
replay = "sdet_orchestration_crew___mobile_automation_generator.main:replay"
test = "sdet_orchestration_crew___mobile_automation_generator.main:test"
run_with_trigger = "sdet_orchestration_crew___mobile_automation_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
